objects/Leave__c.object
<CustomObject>
    <label>Leave</label>
    <nameField>
        <displayFormat>L-{000000000}</displayFormat>
        <label>Leave Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leaves</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BEREAV</fullName>
                </value>
                <value>
                    <fullName>HOLWRK</fullName>
                </value>
                <value>
                    <fullName>JURY</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>PERSONAL</fullName>
                </value>
                <value>
                    <fullName>PTO</fullName>
                </value>
                <value>
                    <fullName>SICK</fullName>
                </value>
                <value>
                    <fullName>SICK UNPAID</fullName>
                </value>
                <value>
                    <fullName>VBP</fullName>
                </value>
                <value>
                    <fullName>ABSENT</fullName>
                    <isActive>false</isActive>
                    <label>ABSENT</label>
                </value>
                <value>
                    <fullName>Bad Weather</fullName>
                    <isActive>false</isActive>
                    <label>Bad Weather</label>
                </value>
                <value>
                    <fullName>HOLIDAY</fullName>
                    <isActive>false</isActive>
                    <label>HOLIDAY</label>
                </value>
                <value>
                    <fullName>HRLY VAC</fullName>
                    <isActive>false</isActive>
                    <label>HRLY VAC</label>
                </value>
                <value>
                    <fullName>NO SHOW</fullName>
                    <isActive>false</isActive>
                    <label>NO SHOW</label>
                </value>
                <value>
                    <fullName>OFF DUTY</fullName>
                    <isActive>false</isActive>
                    <label>OFF DUTY</label>
                </value>
                <value>
                    <fullName>VACATION</fullName>
                    <isActive>false</isActive>
                    <label>VACATION</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Leave cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Half_Day_Leave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Half Day Leave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leave_End_Date__c</fullName>
        <label>Leave End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artera_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Artera Resource</label>
        <referenceTo>Artera_Resource__c</referenceTo>
        <relationshipLabel>Leaves</relationshipLabel>
        <relationshipName>Leaves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leave_Start_Time__c</fullName>
        <label>Leave Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Leave_Start_date__c</fullName>
        <label>Leave Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_leave_rejection__c</fullName>
        <label>Reason for Leave Rejection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assignment_Conflict_Identified__c</fullName>
        <label>Assignment Conflict Identified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Status_Approved</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE( Status__c ), &quot;Approved&quot;), $User.Bypass_Validation__c = FALSE)</errorConditionFormula>
        <errorMessage>You cannot make changes to an approved Leave</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_for_leave_rejection</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
    AND(
        TEXT( Status__c ) = &quot;Rejected&quot;, 
        ISBLANK( Reason_for_leave_rejection__c )), True, False
 )</errorConditionFormula>
        <errorDisplayField>Reason_for_leave_rejection__c</errorDisplayField>
        <errorMessage>Please mention a reason for leave rejection.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Leave_Status_for_Operator</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name =&apos;Hydro-X Operator&apos;,
TEXT( Status__c )!=&apos;Requested&apos;,
ISCHANGED( Status__c )
 || 

 $Profile.Name =&apos;Hydro-X Operator&apos;,
TEXT( Status__c )!=&apos;Leave cancelled&apos;,
ISCHANGED( Status__c )
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Error: You cannot update the leave to this status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_date_should_not_less_than_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>Leave_Start_date__c  &gt;  Leave_End_Date__c</errorConditionFormula>
        <errorDisplayField>Leave_Start_date__c</errorDisplayField>
        <errorMessage>Error -End Date should not be less than Start Date</errorMessage>
    </validationRules>
</CustomObject>